# stihl-imow-webapi

./: .flake8  .gitignore  AGENTS.md  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  README.md  REVIEW.md  SECURITY.md  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  python-package.yml  python-publish.yml
docs/imow/: index.html
docs/imow/api/: index.html
docs/imow/common/: actions.html  consts.html  exceptions.html  index.html  messages.html  mower.html  mowerstate.html  mowertask.html  package_descriptions.html
imow/api/: __init__.py
imow/common/: actions.py  consts.py  currentmowerstate.py  exceptions.py  messages.py  mower.py  mowerstate.py  mowertask.py  mowertaskstate.py  package_descriptions.py
requirements/: dev.txt  release.txt
tests/: secrets.py.example  test_integration_imow.py  test_unit_imow.py
